2013-07-23 v0.0.7 clinton at omniti dot com
  * (Eric Saxby) Provide proper default and validation for alpha attribute of graph_datapoint LWRP
  * Correct metric type for text metrics in the nad Metric Scanner driver

2013-07-22 v0.0.6 clinton at omniti dot com
  * Change MetricScanner api to distinguish between internal Circonus 
    metric names and human-visible names that appear in the web UI
  * Fix ping metric scanner driver to provide correct internal names
  * Cache clearing support via Node attributes
  * New action :delete for check_bundle LWRP to support deprovisioning

2013-07-16 v0.0.5 clinton at omniti dot com
  * Only use guess_main_ip for target if it is available
  * Fallback to using a case statement to guess class for check scanner if register_type fails (hack)  
  * Workaround for graph datapoint "alpha is null by default" API bug  

2013-07-15 v0.0.4 clinton at omniti dot com
  * Add facility to perform auto-discovery of available metrics for ping and nad check types

2013-07-11 v0.0.3 clinton at omniti dot com
  * Add better exception handling to check_bundle LWRP
  * Typo and formatto fixes in README.md
  * start change log (ahem)