@@ -1,6 +1,9 @@
 2013-07-23 v0.0.7 clinton at omniti dot com
   * (Eric Saxby) Provide proper default and validation for alpha attribute of graph_datapoint LWRP
+  * (Eric Saxby) Add support for guide and composite graph datapoints to graph_datapoint LWRP
   * Correct metric type for text metrics in the nad Metric Scanner driver
+  * Fix infinite recursion bug caused by redefining RestClient::Resource, which 
+    exhibited only when chef-client was run as a daemon (reloading on intervals).
 
 2013-07-22 v0.0.6 clinton at omniti dot com
   * Change MetricScanner api to distinguish between internal Circonus 
